...
      builder: ((context, snapshot) {
        if (snapshot.hasError) {
          return const Text("Something went wrong!");
        } else if (snapshot.hasData) {
          final user = snapshot.data!.first;
          return InkWell(
            key: Key('lessonCard'),
            onTap: () {
              if (!isMobile) {
                showModalBottomSheet(
                  showDragHandle: true,
                  context: context,
                  isScrollControlled: true,
...
